# open-ai-search

./: .gitignore  Dockerfile  README.md  compose.yml  config.example.py  config.example.yaml  main.py  pyproject.toml  rag.py  requirements.txt
.github/workflows/: ci.yaml
open_ai_search/: api.py  bilibili_search_engine.py  config.py  entity.py  rag.py  search_engine.py
open_ai_search/common/: __init__.py  _env.py  _project_root.py  async_parallel_iterator.py  config_loader.py  logger.py  trace_info.py
open_ai_search/retriever/: __init__.py  baidu.py  base.py  base_scraper.py  bilibili.py  bing.py  bing_api.py  bing_scraper.py  ddg.py  fallback_retriever.py
open_ai_search/search_engine/: __init__.py  base.py  bilibili_search_engine.py  bing_search_engine.py  search_engine.py
open_ai_search/util/: iterator_tool.py
resource/prompt/: related_question.txt  summary.txt  summary_qa.txt  table.txt
resource/prompt/en/: entity.txt  qa.txt  related_question.txt  rewrite.md  summary.txt
resource/prompt/zh/: entity.txt  qa.txt  related_question.txt  rewrite.md  summary.txt
resource/www/: index.html
test/: test_search_engine.py
tests/: conftest.py  test_baidu.py  test_bilibili.py  test_bilibili_search_engine.py  test_bing.py  test_bing_search_engine.py  test_config.py  test_ddg.py  test_fallback.py  test_search_engine.py
